# Windrose-Stack-Patcher

./: LICENSE  README.md
source/: CMakeLists.txt  README.md  main.cpp  resource.h  resources.rc
source/assets/: Stack_Size_Changes_999999_P.pak  Stack_Size_Changes_99999_P.pak  Stack_Size_Changes_9999_P.pak  Stack_Size_Changes_999_P.pak  Stack_Size_Changes_x02_P.pak  Stack_Size_Changes_x03_P.pak  Stack_Size_Changes_x04_P.pak  Stack_Size_Changes_x05_P.pak  Stack_Size_Changes_x06_P.pak  Stack_Size_Changes_x07_P.pak  Stack_Size_Changes_x08_P.pak  Stack_Size_Changes_x09_P.pak  Stack_Size_Changes_x100_P.pak  Stack_Size_Changes_x10_P.pak
